# library-management-qt

./: .gitignore  CMakeLists.txt  README.md  main.cpp  publications.csv
controller/: PublicationController.cpp  PublicationController.h
model/: Article.cpp  Article.h  Book.cpp  Book.h  Date.cpp  Date.h  Publication.cpp  Publication.h  UndoAction.cpp  UndoAction.h
repository/: BasePublicationRepository.cpp  BasePublicationRepository.h  CsvPublicationRepository.cpp  CsvPublicationRepository.h  JsonPublicationRepository.cpp  JsonPublicationRepository.h
resources/: style.qss
tests/: CMakeLists.txt  LibraryManagementTest.cpp  PublicationControllerTest.cpp  PublicationRepositoryTests.cpp
tests/resources/: dummy.json
ui/: ActionButtonsDelegate.cpp  ActionButtonsDelegate.h  DateEditDelegate.cpp  DateEditDelegate.h  PublicationFilterProxyModel.cpp  PublicationFilterProxyModel.h  PublicationTableModel.cpp  PublicationTableModel.h  UserInterface.cpp  UserInterface.h
